--- a/a-final-project/styles/medium.css
+++ b/a-final-project/styles/medium.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:400px){
+@media screen and (min-width:550px){
     
     /* _____________________________________________________________________NAVIGATION ______________________________________________________*/
     nav{
@@ -8,8 +8,7 @@
         top:0;
         position: sticky;
         z-index: 1000;
-        font-size: 1.3rem;
-        
+        font-size: 1.3rem; 
     }
    
     nav ul{
@@ -18,18 +17,19 @@
         justify-content: space-around;
     }
 
-
     #hamburger-button{
         display: none
     }
 
     /*____________________________________________________________ INDEX home-main_________________________________________________ */
     .home-main, .order-main{
+        flex-direction: column;
         background-color: var(--elsa);
         border: 10px var(--moana);
         margin: 4rem;
         padding:4rem;
     }
+
     /* Hero label button " */   
     #hero-label{
         position:relative;
@@ -47,16 +47,13 @@
         grid-column: 1/2;
     }
 
-    /* [index card parts] */
-    /* .home-product section{
-        max-width: fit-content;
-        border-style: var(--mulan) solid; 
-        border-width: 3.8px; 
-        border-radius: 5rem; 
-    } */
-
     .home-product{
         display: grid;
         /* grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
+    }
+
+    footer{
+        display: flex;
+        justify-content: center;
     }
 }
