--- a/a-final-project/styles/base.css
+++ b/a-final-project/styles/base.css
@@ -44,23 +44,15 @@ body{
 /* _____________[header stuff]______________________ */
 header{
     display:flex;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center; 
-    /* justify-content: space-around; */
+    justify-content: center;
     background-color: var(--aurora);
-    /* padding: .4rem 1rem; */
+
+}
+header img{
+    justify-content: center;
+    
 }
 
-        /* Logo Stuff */
-
-#logo{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-        margin:0;
-    font-size:1rem;
-}
 #logo img, footer img{
     border-radius: 10px;
     margin: 2.4rem;
@@ -122,14 +114,21 @@ nav ul.open li{
 }
 
 /* ______________________Multi Page code________________________________ */
-.home-main, .order-main, .products-main, .about-main, .confirm-main{
+.home-main, .order-main, .products-main, .about-main, .confirm-main, .reference-main{
     background-color: var(--elsa);    
     font-size:1.2rem;
     margin: 3rem;
     padding:20px;
 }
 
-/*_______________________________________________________ Index Page_________________________________________________________ */
+/*_______________________________________________________ Index.html Page_________________________________________________________ */
+
+/* .home-main{
+    background-color: aquamarine;
+    display:flex;
+    justify-content: space-around;
+} */
+
 
 /* ________[HERO IMAGE:]________ */
 .hero {
@@ -147,7 +146,7 @@ nav ul.open li{
     justify-content: center;
     padding:.3rem;
 }
-.hero-label{
+#hero-label{
     position:relative;
     justify-content: left;
     top: 2rem;
@@ -159,23 +158,18 @@ nav ul.open li{
 }
 /*_____________ [index card parts]____________ */
 .home-product section{
-    /* TO DO: Does border-color actually work? I'm pretty sure mulan is being used in a different class */
+    display: grid;
+    grid-template-columns:  repeat(auto-fit, minmax(250px, 1fr));
+    margin:0 3rem ;
+    padding:4rem;
+    color: var(--mulan); 
     max-width: fit-content;
     border-color: var(--mulan);
     border-style: solid; 
     border-width: 3.8px; 
-    border-radius: 5rem; 
+    border-radius: 5rem;
     
-}
-
-.home-product section{
-
-    display: grid;
-    grid-template-columns:  repeat(auto-fit, minmax(250px, 1fr));
-    margin:4rem;
-    padding:4rem;
-
-    color: var(--mulan);
+      
 }
 
 .home-product img, .produdcts-main img{
@@ -188,13 +182,14 @@ TO DO: MAKE WEATHER AT BOTTOM
  [[only remove comments after ALL the cards in index page are taken care of]] */
 
 .order-product{
+    display: grid;
     grid-column: 1/4;
     justify-content: center;
-
+    text-align: center;
 }
 .weather{
     text-align: center;
-    grid-column: 1/2;
+    grid-column: 1/4;
 }
 #forecast{
     display: flex;
@@ -205,7 +200,7 @@ TO DO: MAKE WEATHER AT BOTTOM
 /* ______________________________________________PRODUCTS.HTML__________________________________________ */
 
 #products-main{
-    display:grid;
+    /* display:grid; */
     grid-template-columns: repeat(auto-fit, minmax(250px, 2fr));
     margin: 1rem auto;
     padding:2rem;
@@ -254,7 +249,21 @@ TO DO: MAKE WEATHER AT BOTTOM
     .order-main{
         display: grid;
         grid-template-columns: 1fr 1fr ;
+        border-style: solid;
+        border-width: 3.8px; 
+        border-radius: .4rem; 
+        padding: 35px;
+        margin: 1rem;  
     }
+    .order-section{
+
+        border-style: solid;
+        border-width: 3.8px; 
+        border-radius: .4rem; 
+        padding: 35px;
+        margin: 1rem;  
+    }
+
     .order{
         display: grid;    
         grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
@@ -348,12 +357,16 @@ TO DO: MAKE WEATHER AT BOTTOM
     /* chatgbt help */
     position: relative;
     justify-content: center;
-    width: 100%;
     max-width: 100%; /* Ensures the iframe doesn't exceed the container width */
     padding-bottom: 56.25%; /* 16:9 aspect ratio */
     height: 0;
     overflow: hidden;
     
+}
+/* _____________________________________Reference.html stuff_______________________________________ */
+
+.reference-main{
+  padding:5rem 0;
 }
 
 /* ____________________________________________FOOTER STUFF __________________________________*/
@@ -363,9 +376,12 @@ footer{
     border-style:double;
     border-color: var(--mulan);
     text-align: center;
-    max-width: 100%;
-    
+    max-width: 100%;  
+}
 
+.footer-img{
+    display: flex;
+    justify-content: center;
 }
 footer a{
     color:var(--who-knows);
@@ -404,7 +420,7 @@ footer a:hover{
 
 /* ________[The copy right symbol at the very bottom of the page]*/
 .copyright{
-    grid-column: 1/4;
+    grid-column: 1/6;
     text-align: center;
     color:var(--mulan)
 }
