--- a/a-final-project/styles/medium.css
+++ b/a-final-project/styles/medium.css
@@ -20,8 +20,23 @@
     #hamburger-button{
         display: none
     }
+    
+    footer{
+        display: flex;
+        justify-content: center;
+    }
 
     /*____________________________________________________________ INDEX home-main_________________________________________________ */
+            /* Logo Stuff */
+    #logo{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        margin:0;
+        font-size:1rem;
+    }
+    
+    
     .home-main, .order-main{
         flex-direction: column;
         background-color: var(--elsa);
@@ -51,9 +66,9 @@
         display: grid;
         /* grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
     }
+/* _________________________________________________order.html_____________________________________________ */
 
-    footer{
-        display: flex;
-        justify-content: center;
-    }
+
+
+
 }
